Java migrations and clean up